--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,22 @@ body{
 }
 
 #header-container{
-    max-width: 94%;
+    max-width: 100%;
     display: flex;
     margin-bottom: 80px;
+    position: fixed;
+    z-index: 100;
+    background-color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100px;
 }
 
 #max-width{
     max-width: 94%;
 }
+
 #list{
     display: flex;
     margin-left: 80px;
@@ -120,35 +128,42 @@ body{
 #announce-tab-img{
     width: 380px;
     margin-top: 60px;
+    margin-left: 100px;
 }
 #why{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-left: -100px;
+    margin-left: -55px;
 }
 
 #n-one{
-    margin-left: 700px; margin-top: -305px;
+    margin-left: 700px; 
+    margin-top: -305px;
     font-size: 60px;
     color: lime;
 }
 #n-one-text{
-    margin-left: 750px; margin-top: -300px;
+    margin-left: 750px; 
+    margin-top: -300px;
 }
 #n-two{
-    margin-left: 700px; margin-top: -160px;
+    margin-left: 700px; 
+    margin-top: -160px;
     font-size: 60px;
     color: lime;
 }
 #n-two-text{
-    margin-left: 750px; margin-top: -155px;
+    margin-left: 750px; 
+    margin-top: -155px;
 }
 #n-three{
-    margin-left: 700px; margin-top: -25px;
+    margin-left: 700px; 
+    margin-top: 5px !important;
     font-size: 60px;
     color: lime;
 }
 #n-three-text{
-    margin-left: 750px; margin-top: -70px;
+    margin-left: 750px; 
+    margin-top: -65px;
 }
 
 #btn-container{
@@ -158,71 +173,119 @@ body{
 #btn-one{
     width: 360px;
     margin-left: 50px;
-    height: 400px;
+    height: 460px;
     margin-right: 10px;
     border-radius: 25px;
-    border: 3px solid black;
+    border: 4px solid black;
     background-color: inherit;
     border-bottom: 0;
     border-right: 0;
+    margin-left: 70px;
 }
+#btn-one:hover{
+    transition: 2.5s;
+    background-color: lime;
+    color: white;
+    transform: translateY(10px)
+}
+
 #img-one{
     width: 300px;
     height: 300px;
     margin-bottom: 30px;
-    margin-top: -150px;
+    margin-top: -156px;
 }
+
+#img-one:hover{
+    transform: translateY(-5px);
+    transition: 0.5s;
+}
+
 #img-text{
-    width: 180px;
-    margin-left: 90px;
-    font-size: large;
+    width: 230px;
+    margin-left: 35px;
+    font-size: 28px;
+    text-align: left;
 }
 #btn-two{
     width: 360px;
     margin-left: 50px;
-    height: 400px;
+    height: 460px;
     margin-right: 10px;
     border-radius: 25px;
-    border: 3px solid black;
+    border: 4px solid black;
     background-color: inherit;
     border-bottom: 0;
     border-right: 0;
 }
+#btn-two:hover{
+    background-color: black;
+    color: white;
+    transition: 2.5s;
+    transform: translateY(-10px);
+}
+
 #img-two{
     width: 300px;
     height: 300px;
     margin-bottom: 30px;
-    margin-top: -150px;
+    margin-top: -160px;
 }
+
+#img-two:hover{
+    transform: translateY(10px);
+}
+
 #img-text-two{
-    width: 130px;
-    margin-left: 120px;
-    font-size: large;
+    width: 230px;
+    margin-left: 40px;
+    font-size: 28px;
+    text-align: left;
 }
 #btn-three{
     width: 360px;
     margin-left: 50px;
-    height: 400px;
+    height: 460px;
     margin-right: 0px;
     border-radius: 25px;
-    border: 3px solid black;
+    border: 4px solid black;
     background-color: inherit;
     border-bottom: 0;
     border-right: 0;
 }
+
+#btn-three:hover{
+    background-color: lime;
+    color: white;
+    transform: translateY(-10px);
+    transition: 2.5s;
+}
+
 #img-three{
     width: 300px;
-    height: 300px;
+    height: 320px;
     margin-bottom: 30px;
-    margin-top: -190px;
+    margin-top: -170px;
 }
+
+#img-three:hover{
+    transform: translateY(10px);
+}
+
 #img-text-three{
-    width: 170px;
-    margin-left: 110px;
-    font-size: large;
+    width: 230px;
+    margin-left: 40px;
+    font-size: 28px;
+    text-align: left;
 }
 #text-pad{
     width: 465px;
+}
+#group-37-img{
+    padding-left: 25px;
+}
+#group-37-img:hover{
+    transform: translateX(10px);
 }
 #sign-up-three{
     display: flex;
@@ -241,6 +304,7 @@ body{
     border-left: 3px solid green;
     font-weight: 500;
     font-size: large;
+    margin-left: 38px;
 }
 
 #text-width{
